Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/failures/common/rest/DuplicateAnnotationValue.out
DuplicateAnnotationValue.java:11:9: compiler.err.annotation.missing.default.value: A, field
1 error
